--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,16 @@ services:
   auth-app:
     container_name: auth-services
     build:
-      context: .
+      context: ./auth
       dockerfile: Dockerfile
       target: ${TARGET:-dev}
+    command: ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "5000", "--reload"]
     ports:
       - 5000:5000
     volumes:
-      - ./:/app
+      - ./auth/:/app
     environment:
-      env_file: .env
+      env_file: ./auth/.env
     networks:
       - chat-network
 
