--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,13 +15,13 @@ services:
     environment:
       env_file: ./auth/.env
     networks:
-      - chat-network
+      - community-network
 
   localstack:
     container_name: localstack
     image: localstack/localstack
     ports:
-      - "4566:4566"
+      - 4566:4566
     environment:
       - SERVICES=dynamodb,s3
       - DEFAULT_REGION=eu-west-1
@@ -31,8 +31,8 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "localstack:/tmp/localstack"
     networks:
-      - chat-network
+      - community-network
 
 networks:
-  - chat-network:
+  - community-network:
     external: true      
